# joypad_to_keyboard

./: .gitignore  Krita_Shortcuts_.md  README.md  SN30_Krita.shortcuts  config.py  main.py  mapper.py  pyproject.toml  test_events.py
config/: KEYBOARD_MAP.py  joypad.py  sn30.py  sn30pro.py
joypad_to_keyboard.egg-info/: PKG-INFO  SOURCES.txt
