[project]
name = "joypad_to_keyboard"
version = "0.1.0"
description = "Python script to capture controller input and send keystrokes, like programs Antimicro or Input Remapper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evdev>=1.9.2",
]

[build-system]
requires = ["setuptools >= 68.2.0"]